fix text spacing and main content alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,5 +3,6 @@ nav {
 }
 
 h1 {
+  font-family: 'Times New Roman', Times, serif;
   color: teal;
 }
